# NNucleate

./: .gitignore  LICENSE  README.md  example_1.py  setup.cfg  setup.py
Cython_Neighbourlist/: README.md  neighborlist.cpp  neighborlist.h  neighborlist.pyx  tasks.py
FES_analysis_MFI/: GNN_meta_FES.ipynb  GNN_meta_FES_merged.ipynb
NNucleate/: __init__.py  committor_regularisation.py  data_augmentaion.py  data_augmentation.py  dataset.py  models.py  pycv_link.py  trainig.py  training.py  utils.py
NNucleate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
NNucleate/NNucleate.egg-info/: SOURCES.txt
docs/: .index.rst.swp  conf.py  genindex.html  index.html  index.rst  modules.html  py-modindex.html
docs/_build/doctrees/: NNucleate.doctree  environment.pickle  setup.doctree
docs/_build/html/: .buildinfo  NNucleate.html  genindex.html  index.html  modules.html  objects.inv  search.html  searchindex.js  setup.html
docs/doctrees/: NNucleate.doctree  environment.pickle  index.doctree  modules.doctree
docs/html/: .buildinfo  NNucleate.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  searchindex.js
docs/html/_sources/: NNucleate.rst.txt  index.rst.txt  modules.rst.txt
docs/latex/: main.tex  nnucleate.tex
examples/: example_1.py  example_2.py  example_2_legacy.py  example_3.ipynb  example_4.ipynb  example_cr.py
src/NNucleate/: __init__.py  data_augmentaion.py  trainig.py
src/NNucleate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/NNucleate/NNucleate.egg-info/: SOURCES.txt
(+16 files in other folders)
