[metadata]
name = NNucleate
version = 0.0.1
author = Florian Dietrich
author_email = ucecfmd@ucl.ac.uk
description = A package for training and constructing neural networks for the approximation of nucleation collective variables
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Flofega/NNucleate
project_urls =
    Bug Tracker = https://github.com/Flofega/NNucleate/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = torch, numpy, mdtraj, mdanalysis, scipy, cython
python_requires = >=3.6

[options.packages.find]
where = src